# ocr-server

./: .dockerignore  .gitignore  Dockerfile  README.md  _b64.txt  _out.txt  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  dockerhub-publish.yml
ocr_mcp/: __init__.py  layout_engine.py  ocr_engine.py  server.py  warmup.py
tests/: make_test_image.py  ocr-mcp.postman_collection.json  test_engine.py  test_mcp_client.py
